fix(css): center align text in body

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,5 @@
 body{
   background-image: url(/src/assets/app.jpg);
   justify-content: center;
-  te
+  text-align: center;
 }
